--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <GridPane  alignment="CENTER" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+
     <HBox  alignment="CENTER_RIGHT" spacing="10" GridPane.columnIndex="0" GridPane.rowIndex="0">
     <Label maxWidth="-Infinity" text="Nuo" />
     <TextField fx:id="firstNumberInput" onKeyReleased="#handleKeyReleased"/>
@@ -28,12 +29,14 @@
             <Button fx:id="buttonStart"
             onAction="#count" maxWidth="Infinity" >Pradėti</Button>
             <Button fx:id="buttonCancel"
-            onAction="#count" maxWidth="Infinity">Baigti</Button>
+            onAction="#stop" maxWidth="Infinity">Baigti</Button>
         </children>
 
     </VBox>
     <VBox alignment="CENTER" GridPane.columnSpan="3" GridPane.rowIndex="4">
-        <Label visible="false" text="Skaičiavimo progresas" alignment="center" textAlignment="CENTER"></Label>
+        <Label fx:id="labelForPB" visible="false" alignment="center" textAlignment="CENTER"></Label>
         <ProgressBar  visible="false" fx:id="progressBar"  prefWidth="250" />
     </VBox>
+
+
 </GridPane>
